@@ -48,6 +48,13 @@
 					<OPTION value="{$key}" {if $listdata.type eq $key} SELECTED {/if}>{$item}</OPTION>
 					{/foreach}
 				</SELECT>
+				{t}Group:{/t}
+				<SELECT SIZE="1" NAME="g" ONCHANGE="document.choosefilter.submit();">
+					<OPTION value="0"{if !$listdata.customergroupid} SELECTED{/if}>{t}- all -{/t}</OPTION>
+					{section name=customergroups loop=$customergroups}
+					<OPTION value="{$customergroups[customergroups].id}" {if $listdata.customergroupid eq $customergroups[customergroups].id} SELECTED {/if}>{$customergroups[customergroups].name|truncate:50:"...":true}</OPTION>
+					{/section}
+				</SELECT>
 			</FORM></P>
 		</TD>
 	</TR>		
